Lego 842 alert component (#1349)
feat(toast): implement toast component

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -519,6 +519,13 @@
     </div>
   </div>
 
+  <!--Toast-->
+  <div class="example-wrapper">
+    <h3>Toast</h3>
+    <elvia-toast></elvia-toast>
+    <button (click)="showToast()">Show toast</button>
+  </div>
+
   <!--Tooltip-->
   <div class="example-wrapper">
     <h3>Tooltip</h3>
