--- a/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-doc.component.html
@@ -9,7 +9,9 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-ceg>
+    <app-timepicker-ceg></app-timepicker-ceg>
+  </app-ceg>
 
   <!-- SIZE -->
   <app-component-section [sectionTitle]="'Size'">
