--- a/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
@@ -1,13 +1,33 @@
-<ng-container *ngFor="let control of controls | keyvalue">
+<ng-container *ngFor="let control of cegContent.controls | async | keyvalue">
   <ng-container *ngIf="isGroup(control.value); else singleControl">
     <fieldset class="e-strip-fieldset">
-      <legend class="e-text-sm-strong e-mb-8">{{ control.value.title }}</legend>
+      <legend class="e-form-field__label e-mb-8">{{ control.value.title }}</legend>
+
       <ng-container *ngFor="let childControl of control.value.controls | keyvalue">
         <ng-container [ngSwitch]="childControl.value.type">
-          <app-radio-group *ngSwitchCase="'radioGroup'" [radioGroup]="childControl.value" />
-          <app-checkbox *ngSwitchCase="'checkbox'" [checkbox]="childControl.value" />
-          <app-switch *ngSwitchCase="'switch'" [switch]="childControl.value" />
-          <app-counter *ngSwitchCase="'counter'" [counter]="childControl.value" />
+          <app-radio-group
+            *ngSwitchCase="'radioGroup'"
+            [radioGroup]="childControl.value"
+            (toggle)="updateValue(childControl.key, $event)"
+          />
+
+          <app-checkbox
+            *ngSwitchCase="'checkbox'"
+            [checkbox]="childControl.value"
+            (toggle)="updateValue(childControl.key, $event)"
+          />
+
+          <app-switch
+            *ngSwitchCase="'switch'"
+            [switch]="childControl.value"
+            (toggle)="updateValue(childControl.key, $event)"
+          />
+
+          <app-counter
+            *ngSwitchCase="'counter'"
+            [counter]="childControl.value"
+            (valueChange)="updateValue(childControl.key, $event)"
+          />
         </ng-container>
       </ng-container>
     </fieldset>
