--- a/packages/web/src/app/shared/component-documentation/ceg/controls/radio-group/radio-group.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/radio-group/radio-group.component.html
@@ -5,6 +5,7 @@
       [name]="radioGroupId"
       [value]="radio.value"
       [checked]="radio.value === radioGroup.value"
+      (change)="onChange(radio.value)"
     />
     <span class="e-radio__mark"></span>
     <span class="e-radio__label">{{ radio.label }}</span>
