--- a/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
@@ -16,7 +16,7 @@
       the badge places itself relative to its content, meaning you can place a badge component within other
       elements, such as the icon in an Icon Button element. Use slots to give the badge its content.
       <app-component-example-generator
-        [componentData]="badgeIconCode"
+        [componentData]="$any(badgeIconCode)"
         [inlineExample]="true"
       ></app-component-example-generator>
     </ng-container>
