--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -30,7 +30,7 @@
             for more information on the icon component
           </div>
           <app-component-example-generator
-            [componentData]="dropdownIconsCode"
+            [componentData]="$any(dropdownIconsCode)"
             [inlineExample]="true"
           ></app-component-example-generator>
         </ng-container>
@@ -46,7 +46,7 @@
             only is the select value.
           </div>
           <app-component-example-generator
-            [componentData]="dropdownTreeCode"
+            [componentData]="$any(dropdownTreeCode)"
             [inlineExample]="true"
           ></app-component-example-generator>
         </ng-container>
@@ -101,7 +101,7 @@
             .
           </div>
           <app-component-example-generator
-            [componentData]="dropdownStatusCode"
+            [componentData]="$any(dropdownStatusCode)"
             [inlineExample]="true"
           ></app-component-example-generator>
         </ng-container>
@@ -154,7 +154,7 @@
             should be removed.
           </div>
           <app-component-example-generator
-            [componentData]="dropdownLoadMoreItemsCode"
+            [componentData]="$any(dropdownLoadMoreItemsCode)"
             [inlineExample]="true"
           ></app-component-example-generator>
         </ng-container>
