--- a/packages/web/src/app/doc-pages/components/pagination-doc/pagination-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/pagination-doc/pagination-doc.component.html
@@ -11,7 +11,7 @@
   <app-component-example-generator
     overflowX="auto"
     overflowy="auto"
-    inlineExample="true"
+    [inlineExample]="true"
     [componentData]="componentData"
   ></app-component-example-generator>
 
