--- a/packages/web/src/app/doc-pages/components/progressbar-doc/progressbar-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/progressbar-doc/progressbar-doc.component.html
@@ -11,7 +11,7 @@
   <!--CEG-->
   <app-component-example-generator
     [componentData]="componentData"
-    width="70"
+    [width]="70"
   ></app-component-example-generator>
 
   <!--USAGE-->
