--- a/packages/web/src/app/doc-pages/components/toast-doc/toast-ceg/toast-ceg.component.html
+++ b/packages/web/src/app/doc-pages/components/toast-doc/toast-ceg/toast-ceg.component.html
@@ -52,7 +52,7 @@
       [showPreview]="false"
       [codeHTML]="exampleInHTML"
       [codeTS]="exampleInTS"
-      noCodePenLink
+      [noCodePenLink]="true"
     ></app-component-example-v1>
   </div>
 
