--- a/packages/web/src/app/doc-pages/other-pages/typography-doc/typography-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/typography-doc/typography-doc.component.html
@@ -33,7 +33,7 @@
           [ngClass]="!loadedImg ? 'e-none' : ''"
           src="../../../../assets/doc-page-icons/pages-icons/RedHat.jpeg"
           alt="Confirmation page illustration"
-          (load)="hideContentLoader($event)"
+          (load)="hideContentLoader($any($event))"
         />
       </div>
     </ng-container>
