--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -59,7 +59,7 @@
           breadcrumb component allowing the use of routing modules (e.g. Angular RoutingModule or React
           Router).
           <app-component-example-generator
-            [componentData]="breadcrumbEventCode"
+            [componentData]="$any(breadcrumbEventCode)"
             [inlineExample]="true"
           ></app-component-example-generator>
         </ng-container>
