--- a/packages/web/src/app/doc-pages/components/card-doc/card-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/card-doc/card-doc.component.html
@@ -9,7 +9,7 @@
   <app-component-example-generator
     [componentData]="componentData"
     [typesData]="typesData"
-    width="75"
+    [width]="75"
   ></app-component-example-generator>
 
   <!--USAGE-->
@@ -76,7 +76,7 @@
     <ng-container ngProjectAs="sectionContent">
       To implement the card component as a link it must be wrapped in a link or an anchor tag.
       <app-component-example-generator
-        [componentData]="cardLinkCode"
+        [componentData]="$any(cardLinkCode)"
         [inlineExample]="true"
       ></app-component-example-generator>
     </ng-container>
