--- a/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
@@ -11,7 +11,7 @@
   <!--CEG-->
   <app-component-example-generator
     [componentData]="componentData"
-    [height]="580"
+    [height]="'580'"
   ></app-component-example-generator>
 
   <!--USAGE-->
