--- a/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
@@ -23,7 +23,7 @@
                 [value]="chip.value"
                 [color]="chip.color"
                 [isDisabled]="chip.isDisabled"
-                (onDelete)="handleOnDeleteInType($event.target.value)"
+                (onDelete)="handleOnDeleteInType($any($event).target.value)"
               ></elvia-chip>
             </div>
           </div>
@@ -40,7 +40,7 @@
                 [value]="2018"
                 type="legend"
                 isSelected="true"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -49,7 +49,7 @@
                 type="legend"
                 color="purple"
                 isSelected="true"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -57,7 +57,7 @@
                 [value]="2020"
                 type="legend"
                 color="red"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -67,7 +67,7 @@
                 type="legend"
                 color="blue"
                 isDisabled="true"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
           </div>
@@ -85,7 +85,7 @@
                 type="choice"
                 iconType="checkmark"
                 isSelected="true"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -93,7 +93,7 @@
                 [value]="'Koblingsfeil'"
                 type="choice"
                 isSelected="false"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -102,7 +102,7 @@
                 isSelected="true"
                 type="choice"
                 isDisabled="true"
-                (isSelectedOnChange)="handleOnChange($event)"
+                (isSelectedOnChange)="handleOnChange($any($event))"
               ></elvia-chip>
             </div>
           </div>
@@ -122,7 +122,7 @@
               <elvia-chip
                 [value]="chip.value"
                 [color]="chip.color"
-                (onDelete)="handleOnDeleteInType($event.detail.value)"
+                (onDelete)="handleOnDeleteInType($any($event).detail.value)"
               ></elvia-chip>
             </div>
           </div>
@@ -140,7 +140,7 @@
                 [value]="chip.value"
                 [color]="chip.color"
                 [isDisabled]="chip.disabled"
-                (onDelete)="handleOnDeleteColor($event.detail.value)"
+                (onDelete)="handleOnDeleteColor($any($event).detail.value)"
               ></elvia-chip>
             </div>
           </div>
