--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -22,7 +22,7 @@
               alt="Kari"
               class="profile-image"
               src="assets/contact/Kari.jpg"
-              (load)="hideContentLoader($event, 'kari')"
+              (load)="hideContentLoader($any($event), 'kari')"
             />
           </div>
           <div class="profile-info">
@@ -53,7 +53,7 @@
               alt="Fride"
               class="profile-image"
               src="assets/contact/Fride.jpg"
-              (load)="hideContentLoader($event, 'fride')"
+              (load)="hideContentLoader($any($event), 'fride')"
             />
           </div>
           <div class="profile-info">
@@ -84,7 +84,7 @@
               alt="Trygve"
               class="profile-image"
               src="assets/contact/Trygve.png"
-              (load)="hideContentLoader($event, 'trygve')"
+              (load)="hideContentLoader($any($event), 'trygve')"
             />
           </div>
           <div class="profile-info">
@@ -119,7 +119,7 @@
               alt="Viljar"
               class="profile-image"
               src="assets/contact/Viljar.png"
-              (load)="hideContentLoader($event, 'viljar')"
+              (load)="hideContentLoader($any($event), 'viljar')"
             />
           </div>
           <div class="profile-info">
@@ -152,7 +152,7 @@
               alt="Hilde"
               class="profile-image"
               src="assets/contact/Hilde.jpg"
-              (load)="hideContentLoader($event, 'hilde')"
+              (load)="hideContentLoader($any($event), 'hilde')"
             />
           </div>
           <div class="profile-info">
@@ -185,7 +185,7 @@
               alt="tom"
               class="profile-image"
               src="assets/contact/Tom.png"
-              (load)="hideContentLoader($event, 'tom')"
+              (load)="hideContentLoader($any($event), 'tom')"
             />
           </div>
           <div class="profile-info">
@@ -216,7 +216,7 @@
               alt="Erik"
               class="profile-image"
               src="assets/contact/Erik.png"
-              (load)="hideContentLoader($event, 'erik')"
+              (load)="hideContentLoader($any($event), 'erik')"
             />
           </div>
           <div class="profile-info">
