--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -3,7 +3,7 @@
     <elvia-radio-filter
       [items]="changelogRadioFilterItems"
       [value]="radioFilterValue"
-      (valueOnChange)="radioFilterValue = $event.detail.value; searchChangelog()"
+      (valueOnChange)="radioFilterValue = $any($event).detail.value; searchChangelog()"
     ></elvia-radio-filter>
     <div class="e-form-field">
       <div class="e-search e-search--instant" [ngClass]="{ 'e-search--searched': searchValue.length > 0 }">
@@ -62,7 +62,7 @@
             <div class="changelog-section" *ngFor="let changelog of el.changelog">
               <div
                 class="changelog-section-title"
-                [id]="el.date | ChangelogIdPipe: el.version:(changelog.type | ChangelogTypePipe):''"
+                [id]="el.date | ChangelogIdPipe : el.version : (changelog.type | ChangelogTypePipe) : ''"
               >
                 {{ changelog.type | ChangelogTypePipe }}
               </div>
@@ -78,7 +78,7 @@
                   <a
                     class="e-link e-link--inline"
                     [href]="component.url"
-                    [id]="el.date | ChangelogIdPipe: el.version:component.displayName:changelog.type"
+                    [id]="el.date | ChangelogIdPipe : el.version : component.displayName : changelog.type"
                   >
                     {{ component.displayName }}
                   </a>
@@ -95,7 +95,7 @@
                   <a
                     class="e-link e-link--inline"
                     [href]="component.url"
-                    [id]="el.date | ChangelogIdPipe: el.version:component.displayName:changelog.type"
+                    [id]="el.date | ChangelogIdPipe : el.version : component.displayName : changelog.type"
                   >
                     {{ component.displayName }}
                   </a>
@@ -103,7 +103,10 @@
               </div>
               <ul class="e-list">
                 <li *ngFor="let change of changelog.changes">
-                  <p [innerHTML]="change" [id]="el.date | ChangelogIdPipe: el.version:change:'entry'"></p>
+                  <p
+                    [innerHTML]="change"
+                    [id]="el.date | ChangelogIdPipe : el.version : change : 'entry'"
+                  ></p>
                 </li>
               </ul>
               <ng-container *ngIf="changelog.fixes && changelog.fixes.length > 0">
