--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-v1/component-example-v1.component.html
@@ -46,7 +46,7 @@
           [codeCSS]="codeCSS"
           [codeInverted]="codeInverted"
           [isInverted]="isInverted"
-          [noSubscriptions]="'true'"
+          [noSubscriptions]="true"
           [noCodePenLink]="noCodePenLink"
         ></app-component-example-code>
       </div>
