fix(web): remove unnecessary  from angular templates

--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.html
@@ -21,7 +21,7 @@
         alt="Informative popover structure"
         src="./../../../../assets/popover/Group 2791.svg"
         class="usage-image-desktop e-w-100 responsive-height"
-        (load)="hideContentLoader($any($event))"
+        (load)="hideContentLoader($event)"
       />
       <div class="usage-image-mobile e-w-100">
         <app-component-subsubsection [sectionTitle]="'Heading'">
