--- a/packages/web/src/app/shell/header/header.component.html
+++ b/packages/web/src/app/shell/header/header.component.html
@@ -6,13 +6,13 @@
         *ngIf="!isPrideMonth"
         src="./../../../assets/logo/elvia_negative_1.svg"
         alt="Elvia Logo"
-        (load)="hideContentLoader($any($event))"
+        (load)="hideContentLoader($event)"
       />
       <img
         *ngIf="isPrideMonth"
         src="./../../../assets/logo/elvia_pride_rgb.svg"
         alt="Elvia Logo"
-        (load)="hideContentLoader($any($event))"
+        (load)="hideContentLoader($event)"
       />
     </a>
     <div
