Lego 2318: radio filter - legge til ikon (#1356)
* feat(radio-filter): support for icons in filter label through innerHTML

* chore(radio-filter): bump package, update changelog and documentation

* docs(radio-filter): add example with icon

* fix(radio-filter): use innerText to fix aria-label when icons are used

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -377,11 +377,7 @@
   <div class="example-wrapper">
     <h3>Radio filter</h3>
     <elvia-radio-filter
-      [items]="[
-        { label: 'All', value: 'all' },
-        { label: 'Read', value: 'read' },
-        { label: 'Unread', value: 'unread' }
-      ]"
+      [items]="radioFilterValues"
       [value]="'read'"
       [name]="'readRadioFilters'"
       [ariaLabel]="'{value} filtrering valgt'"
