fix(web): fix documentation type

--- a/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/radio-filter-doc/radio-filter-doc.component.html
@@ -31,7 +31,7 @@
         <ng-container ngProjectAs="sectionContent">
           <div>You can have an icon together with the text.</div>
           <app-component-example-generator
-            [componentData]="radioFilterIconCode"
+            [componentData]="$any(radioFilterIconCode)"
             [inlineExample]="true"
             [tabIdPrefix]="'radioFilterWithIcon'"
           ></app-component-example-generator>
