--- a/packages/web/src/app/shell/footer/footer.component.html
+++ b/packages/web/src/app/shell/footer/footer.component.html
@@ -30,8 +30,7 @@
         <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-sm-custom">
           <div class="text-align-center">
             <div class="e-text-left">
-              <!-- TODO: LOCALIZATION
-                <div class="e-mb-24" *ngIf="showLocaleToggle">
+              <div class="e-mb-24" *ngIf="showLocaleToggle">
                 <a
                   class="e-link e-link--sm e-link--inverted"
                   (click)="setLocale('nb-NO')"
@@ -51,7 +50,7 @@
                 >
                   EN
                 </a>
-              </div> -->
+              </div>
               <!--  TODO: HUSK! SKAL HENTE DATO FRA CONTENTFUL
               <div>Last updated {{ formattedDate }}</div> 
               -->
