refactor(ceg): unwrap configuration object

--- a/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-ceg/timepicker-ceg.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/timepicker-doc/timepicker-ceg/timepicker-ceg.component.html
@@ -1,1 +1,1 @@
-<elvia-timepicker (valueOnChange)="handleOnChange($event.detail.value)"></elvia-timepicker>
+<elvia-timepicker (valueOnChange)="handleOnChange($any($event).detail.value)"></elvia-timepicker>
