--- a/packages/web/src/app/shared/component-documentation/ceg/code-generator/code-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/code-generator/code-generator.component.html
@@ -2,7 +2,7 @@
   <div slot="content" class="code-container">
     <div class="top-menu">
       <elvia-tabs
-        (valueOnChange)="activeTabIndex = $event.detail.value"
+        (valueOnChange)="activeTabIndex = $any($event).detail.value"
         [isInverted]="true"
         [value]="activeTabIndex"
         [items]="tabs"
