feat(ceg): support custom text on text trigger

--- a/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
@@ -6,7 +6,11 @@
       (setControls)="setControls($event)"
     />
     <div class="customize-text-container" *ngIf="hasCustomText | async">
-      <app-custom-text [configuration]="selectedConfiguration" (inputChange)="setPropValue($event, true)" />
+      <app-custom-text
+        [configuration]="selectedConfiguration"
+        [customLabel]="cegContent.customizeTextTriggerName"
+        (inputChange)="setPropValue($event, true)"
+      />
     </div>
   </div>
 
