--- a/packages/web/src/app/shared/component-documentation/ceg/custom-text/custom-text.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/custom-text/custom-text.component.html
@@ -53,6 +53,6 @@
     <span class="e-btn__icon">
       <i class="e-icon e-icon--edit" aria-hidden="true"></i>
     </span>
-    <span class="e-btn__title">Customize text</span>
+    <span class="e-btn__title">{{ customLabel || 'Customize text' }}</span>
   </button>
 </elvia-popover>
