--- a/packages/web/src/app/shared/component-documentation/ceg/controls/checkbox/checkbox.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/checkbox/checkbox.component.html
@@ -1,9 +1,14 @@
-<label class="e-checkbox e-checkbox--compact" [for]="checkboxId">
+<label
+  class="e-checkbox e-checkbox--compact"
+  [for]="checkboxId"
+  [ngClass]="{ indented: isChild, 'e-checkbox---disabled': disabled || checkbox.disabled }"
+>
   <input
     type="checkbox"
     [id]="checkboxId"
     [checked]="checkbox.value"
     (change)="onChange(input.checked)"
+    [disabled]="disabled || checkbox.disabled"
     #input
   />
   <span class="e-checkbox__mark"></span>
