--- a/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
@@ -1,7 +1,7 @@
 <fieldset class="e-strip-fieldset" *ngFor="let group of groups">
   <legend class="e-text-sm-strong e-mb-8">{{ group.name }}</legend>
 
-  <ng-container *ngFor="let control of group.controls | keyvalue">
+  <ng-container *ngFor="let control of group.controls | keyvalue : noSort">
     <ng-container [ngSwitch]="control.value.type">
       <app-radio-group
         *ngIf="control.value.type === 'radioGroup'"
@@ -9,11 +9,16 @@
         (toggle)="updateValue(control.key, $event)"
       />
 
-      <app-checkbox
-        *ngIf="control.value.type === 'checkbox'"
-        [checkbox]="control.value"
-        (toggle)="updateValue(control.key, $event)"
-      />
+      <ng-container *ngIf="control.value.type === 'checkbox'">
+        <app-checkbox [checkbox]="control.value" (toggle)="updateValue(control.key, $event)" />
+        <app-checkbox
+          [disabled]="!control.value.value"
+          [isChild]="true"
+          *ngFor="let child of control.value.children | keyvalue : noSort"
+          [checkbox]="child.value"
+          (toggle)="updateValue(child.key, $event)"
+        />
+      </ng-container>
 
       <app-switch
         *ngIf="control.value.type === 'switch'"
