feat(ceg): show slot content in component example

--- a/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
@@ -27,5 +27,6 @@
     class="code-generator"
     [controlManager]="componentExample.cegContent"
     [elementName]="componentExample.elementName"
+    [componentSlots]="componentSlots"
   />
 </div>
