--- a/packages/web/src/app/shared/component-documentation/ceg/controls/checkbox/checkbox.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/checkbox/checkbox.component.html
@@ -1,14 +1,14 @@
 <label
   class="e-checkbox e-checkbox--compact"
   [for]="checkboxId"
-  [ngClass]="{ indented: isChild, 'e-checkbox---disabled': disabled || checkbox.disabled }"
+  [ngClass]="{ indented: isChild, 'e-checkbox---disabled': disabled || checkbox.disabledBy }"
 >
   <input
     type="checkbox"
     [id]="checkboxId"
     [checked]="checkbox.value"
     (change)="onChange(input.checked)"
-    [disabled]="disabled || checkbox.disabled"
+    [disabled]="disabled || checkbox.disabledBy"
     #input
   />
   <span class="e-checkbox__mark"></span>
