--- a/packages/web/src/app/shared/component-documentation/ceg/code-generator/code-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/code-generator/code-generator.component.html
@@ -25,6 +25,8 @@
       </div>
     </div>
 
-    <pre><code [innerHtml]="activeCode | formatCode:language | highlighter:language" class="active-code"></code></pre>
+    <div class="overflow-container">
+      <pre><code [innerHtml]="activeCode | formatCode:language | highlighter:language" class="active-code"></code></pre>
+    </div>
   </div>
 </elvia-accordion>
