--- a/packages/web/src/app/shared/component-documentation/ceg/code-generator/code-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/ceg/code-generator/code-generator.component.scss
@@ -1,3 +1,7 @@
+:host {
+  overflow: auto;
+}
+
 .code-container {
   background: var(--e-grey);
   border-radius: 8px;
@@ -32,4 +36,8 @@
     color: var(--e-white);
     width: 100px;
   }
+}
+
+.overflow-container {
+  overflow-x: auto;
 }
