--- a/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
@@ -31,6 +31,12 @@
         [counter]="control.value"
         (valueChange)="updateValue(control.key, $event)"
       />
+
+      <app-text
+        *ngIf="control.value.type === 'text'"
+        [input]="control.value"
+        (valueChange)="updateValue(control.key, $event)"
+      />
     </ng-container>
   </ng-container>
 </fieldset>
